Fixed alignment
Fixed alignment issues on different browsers.

--- a/style.css
+++ b/style.css
@@ -1,17 +1,3 @@
-/* Styling from orginal document*/
-.attribution {
-  font-size: 11px;
-  text-align: center;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-}
-.attribution a {
-  color: hsl(228, 45%, 44%);
-}
-
 /* Variables */
 :root {
   /* Colors */
@@ -33,6 +19,8 @@
 /* General styles */
 
 body{
+  overflow: hidden;
+
   font-family: var(--secondary-font);
   background-color: var(--cream);
   color: var(--dark-greyish-blue);
@@ -52,24 +40,10 @@ button:hover {
   background-color: var(--dark-blue);
 }
 
-.item-name {
-  font-family: var(--main-font);
-  font-weight: 700;
-}
-
-img {
-  max-width: 100%;
-  max-height: 100%;
-  width: auto;
-  height: auto;
-}
-
-.desktop-image {
-  display: none;
-}
-
 .container {
   display: flex;
+  height: 100%;
+  width: 100vw;
   justify-content: center;
   align-items: center;
   margin: 25px 10px ;
@@ -79,16 +53,31 @@ img {
 
 .store-item{
   width: 340px;
-  height: 610px;
+  height: 630px;
   background-color: var(--white);
   border-radius: 10px;
 }
 
-.store-item img {
+.item-image {
+  height: 100%;
+  width: 100%;
+}
+
+.item-image > img,
+.item-image > source{
   border-radius: 10px 10px 0 0px;
+  height: 100%;
+  width: 100%;
+}
+
+.item-name {
+  font-family: var(--main-font);
+  font-weight: 700;
 }
 
 .item-description {
+  height: 100%;
+  width: 100%;
   padding: 18px;
 }
 
@@ -156,21 +145,47 @@ p {
   text-decoration: line-through;
 }
 
+
 @media (min-width: 750px) {
   .store-item {
     display: flex;
     flex-direction: row;
+    align-items: stretch;
     height: 410px;
-    width: 540px;
+    width: 600px;
   }
 
-  .store-item img {
+  .item-image > img,
+  .item-image > source{
     border-radius: 10px 0 0 10px;
     height: 100%;
+    width: 280px;
+    flex-grow: 1;
   }
 
   .item-description{
-    width: 55%;
+    height: 100%;
+    width: 320px;
+    flex-grow: 1;
   }
 
+  .item-image {
+    width: 100%;
+  }
+
+}
+
+/* Footer*/
+.attribution {
+  font-size: 11px;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  margin-bottom: 10px;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
 }
